Refactor memory allocation

--- a/examples/Algorithms/matrix_mul.ipynb
+++ b/examples/Algorithms/matrix_mul.ipynb
@@ -15,9 +15,9 @@
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 414\n",
-      "  IR Compile time: 0.857300 ms\n",
-      "  Compiler time: 4804.893555 ms\n",
+      "  Lines of generated code: 424\n",
+      "  IR Compile time: 0.944300 ms\n",
+      "  Compiler time: 1385.295044 ms\n",
       "\n"
      ]
     }
@@ -86,12 +86,64 @@
       "  return int(x);\n",
       "}\n",
       "\n",
-      "uniform int off[32];\n",
       "uniform int var[32];\n",
-      "\n",
-      "layout(std430, binding = 0) buffer memory {\n",
-      "  uint mem[];\n",
+      "layout(std430, binding = 0) buffer buf_A {\n",
+      "  uint A_mem[];\n",
       "};\n",
+      "\n",
+      "float atomicAdd_A(int index, float val) {\n",
+      "\tuint uval = floatBitsToUint(val);\n",
+      "\tuint tmp0 = 0;\n",
+      "\tuint tmp1 = 0;\n",
+      "\n",
+      "\twhile (true) {\n",
+      "\t\ttmp0 = atomicCompSwap(A_mem[index], tmp1, uval);\n",
+      "\t\tif (tmp1 == tmp0) break;\n",
+      "\t\ttmp1 = tmp0;\n",
+      "\t\tuval = floatBitsToUint(val + uintBitsToFloat(tmp1));\n",
+      "\t}\n",
+      "\n",
+      "\treturn uintBitsToFloat(tmp1);\n",
+      "}\n",
+      "\n",
+      "layout(std430, binding = 1) buffer buf_B {\n",
+      "  uint B_mem[];\n",
+      "};\n",
+      "\n",
+      "float atomicAdd_B(int index, float val) {\n",
+      "\tuint uval = floatBitsToUint(val);\n",
+      "\tuint tmp0 = 0;\n",
+      "\tuint tmp1 = 0;\n",
+      "\n",
+      "\twhile (true) {\n",
+      "\t\ttmp0 = atomicCompSwap(B_mem[index], tmp1, uval);\n",
+      "\t\tif (tmp1 == tmp0) break;\n",
+      "\t\ttmp1 = tmp0;\n",
+      "\t\tuval = floatBitsToUint(val + uintBitsToFloat(tmp1));\n",
+      "\t}\n",
+      "\n",
+      "\treturn uintBitsToFloat(tmp1);\n",
+      "}\n",
+      "\n",
+      "layout(std430, binding = 2) buffer buf_m0 {\n",
+      "  uint m0_mem[];\n",
+      "};\n",
+      "\n",
+      "float atomicAdd_m0(int index, float val) {\n",
+      "\tuint uval = floatBitsToUint(val);\n",
+      "\tuint tmp0 = 0;\n",
+      "\tuint tmp1 = 0;\n",
+      "\n",
+      "\twhile (true) {\n",
+      "\t\ttmp0 = atomicCompSwap(m0_mem[index], tmp1, uval);\n",
+      "\t\tif (tmp1 == tmp0) break;\n",
+      "\t\ttmp1 = tmp0;\n",
+      "\t\tuval = floatBitsToUint(val + uintBitsToFloat(tmp1));\n",
+      "\t}\n",
+      "\n",
+      "\treturn uintBitsToFloat(tmp1);\n",
+      "}\n",
+      "\n",
       "layout (local_size_x = 16, local_size_y = 16, local_size_z = 1) in;\n",
       "\n",
       "void main() {\n",
@@ -100,28 +152,21 @@
       "  int block_thread_id1 = int(gl_LocalInvocationID.y);\n",
       "  int block_thread_id2 = int(gl_LocalInvocationID.z);\n",
       "\n",
-      "  int v2_0 = block_id;\n",
-      "  int in_block_index_0 = block_thread_id1;\n",
-      "  int in_block_index_1 = block_thread_id0;\n",
       "  int blocks_shape_1 = ((asint(var[0]) + 16) - 1) / 16;\n",
-      "  int out_block_index_0 = v2_0 / blocks_shape_1;\n",
-      "  int out_block_index_1 = v2_0 - (out_block_index_0 * blocks_shape_1);\n",
-      "  int dim_index_0 = (out_block_index_0 * 16) + in_block_index_0;\n",
-      "  int dim_index_1 = (out_block_index_1 * 16) + in_block_index_1;\n",
-      "  bool is_inside_dispatch = (dim_index_0 < asint(var[1])) && (dim_index_1 < asint(var[0]));\n",
+      "  int v2_8 = block_id / blocks_shape_1;\n",
+      "  int index_0 = (v2_8 * 16) + block_thread_id1;\n",
+      "  int index_1 = ((block_id - (v2_8 * blocks_shape_1)) * 16) + block_thread_id0;\n",
+      "  bool is_inside_dispatch = (index_0 < asint(var[1])) && (index_1 < asint(var[0]));\n",
       "  if (is_inside_dispatch)\n",
       "  {\n",
-      "    float v3_0 = 0.0f;\n",
-      "    for (int v3_3 = 0; v3_3 < asint(var[2]); v3_3 += 1)\n",
+      "    float matmul = 0.0f;\n",
+      "    for (int v3_2 = 0; v3_2 < asint(var[2]); v3_2 += 1)\n",
       "    {\n",
-      "      int data_id = (dim_index_0 * asint(var[2])) + v3_3;\n",
-      "      float A_2 = asfloat(mem[off[0] + data_id]); // A\n",
-      "      int data_id_2 = (v3_3 * asint(var[0])) + dim_index_1;\n",
-      "      float B_2 = asfloat(mem[off[1] + data_id_2]); // B\n",
-      "      v3_0 = v3_0 + (sin(A_2) * cos(B_2));\n",
+      "      float A = asfloat(A_mem[(index_0 * asint(var[2])) + v3_2]); // A\n",
+      "      float B = asfloat(B_mem[(v3_2 * asint(var[0])) + index_1]); // B\n",
+      "      matmul = matmul + (sin(A) * cos(B));\n",
       "    }\n",
-      "    int data_id_3 = (dim_index_0 * asint(var[0])) + dim_index_1;\n",
-      "    mem[off[2] + data_id_3] = asuint(pow(v3_0, 2.0f)); // m0\n",
+      "    m0_mem[(index_0 * asint(var[0])) + index_1] = asuint(pow(matmul, 2.0f)); // m0\n",
       "  }\n",
       "}\n",
       "\n"
@@ -137,30 +182,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error: 9.362458e-07\n",
-      "TF Time: 0.0011913295984268188\n",
-      "NP Time: 0.00409303492307663\n",
-      "Speedup: 3.4356864200147355\n",
-      "TF GFLOPS: 225.32425648995533\n",
-      "NP GFLOPS: 65.58347559815687\n"
+      "Error: 2.0023163e-06\n",
+      "TF Time: 0.09573355436325073\n",
+      "NP Time: 0.37513524055480957\n",
+      "Speedup: 3.9185345519649153\n",
+      "TF GFLOPS: 1435.6403497827166\n",
+      "NP GFLOPS: 366.37174707642356\n"
      ]
     }
    ],
    "source": [
-    "Anp = np.random.rand(512, 512).astype(np.float32)\n",
-    "Bnp = np.random.rand(512, 512).astype(np.float32)\n",
+    "Anp = np.random.rand(4096, 4096).astype(np.float32)\n",
+    "Bnp = np.random.rand(4096, 4096).astype(np.float32)\n",
     "A = tf.tensor(Anp)\n",
     "B = tf.tensor(Bnp)\n",
     "\n",
     "start = time.time()\n",
-    "repeat = 4000\n",
+    "repeat = 100\n",
     "for i in range(repeat):\n",
     "    C, = mmul(A, B)\n",
     "Cnp = C.numpy\n",
