--- a/examples/Simulation/wave_simulation.ipynb
+++ b/examples/Simulation/wave_simulation.ipynb
@@ -9,18 +9,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFrost module loaded!\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "Substitute expression is empty",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 27\u001b[0m\n\u001b[0;32m     23\u001b[0m     u,v \u001b[38;5;241m=\u001b[39m WaveIteration(u, v, \u001b[38;5;241m0.2\u001b[39m)\n\u001b[0;32m     25\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m [u, v]\n\u001b[1;32m---> 27\u001b[0m test \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mWaveEq\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: Substitute expression is empty"
+      "TensorFrost module loaded!\n",
+      "WaveEq:\n",
+      "  Kernel count: 1\n",
+      "  Intermediate buffers: 0\n",
+      "  Host readbacks: 0\n",
+      "  Host writes: 0\n",
+      "  Lines of generated code: 425\n",
+      "  IR Compile time: 1.450500 ms\n",
+      "  Compiler time: 1460.647949 ms\n",
+      "\n"
      ]
     }
    ],
@@ -66,73 +64,95 @@
       "List of operations:\n",
       "int v1_0 = input_shape(cost=0.000000, )\n",
       "int v1_1 = input_shape(cost=0.000000, )\n",
-      "float m0 = memory(memory_type=input, cost=0.000000, shape=[v1_0,v1_1], )\n",
-      "float m1 = memory(memory_type=input, cost=0.000000, shape=[v1_0,v1_1], )\n",
-      "float m2 = memory(memory_type=output, cost=0.000000, modified, shape=[v1_0,v1_1], )\n",
-      "float m3 = memory(memory_type=output, cost=0.000000, modified, shape=[v1_0,v1_1], )\n",
+      "float u = memory(memory_type=input, cost=0.000000, shape=[v1_0,v1_1], )\n",
+      "float v = memory(memory_type=input, cost=0.000000, shape=[v1_0,v1_1], )\n",
+      "float v_new = memory(memory_type=output, cost=0.000000, modified, shape=[v1_0,v1_1], )\n",
+      "float m0 = memory(memory_type=output, cost=0.000000, modified, shape=[v1_0,v1_1], )\n",
       "kernel(cost=0.000000, shape=[v1_0,v1_1], )\n",
       "{\n",
-      "  int v2_0 = thread_id(cost=0.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_1 = div(inputs=[v2_0,v1_1], cost=2.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_2 = mul(inputs=[v2_1,v1_1], cost=3.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_3 = sub(inputs=[v2_0,v2_2], cost=4.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_5 = sub(inputs=[v2_1,v2_4(1)], cost=3.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_7 = sub(inputs=[v1_0,v2_6(1)], cost=1.000000, )\n",
-      "  int v2_9 = clamp(inputs=[v2_5,v2_8(0),v2_7], cost=8.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_10 = mul(inputs=[v2_9,v1_1], cost=9.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_12 = sub(inputs=[v1_1,v2_11(1)], cost=1.000000, )\n",
-      "  int v2_14 = clamp(inputs=[v2_3,v2_13(0),v2_12], cost=9.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_15 = add(inputs=[v2_10,v2_14], cost=19.000000, shape=[v1_0,v1_1], )\n",
-      "  float v2_16 = load(memory=[m0], indices=[v2_15], cost=147.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_18 = add(inputs=[v2_1,v2_17(1)], cost=3.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_20 = sub(inputs=[v1_0,v2_19(1)], cost=1.000000, )\n",
-      "  int v2_22 = clamp(inputs=[v2_18,v2_21(0),v2_20], cost=8.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_23 = mul(inputs=[v2_22,v1_1], cost=9.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_25 = sub(inputs=[v1_1,v2_24(1)], cost=1.000000, )\n",
-      "  int v2_27 = clamp(inputs=[v2_3,v2_26(0),v2_25], cost=9.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_28 = add(inputs=[v2_23,v2_27], cost=19.000000, shape=[v1_0,v1_1], )\n",
-      "  float v2_29 = load(memory=[m0], indices=[v2_28], cost=147.000000, shape=[v1_0,v1_1], )\n",
-      "  float v2_30 = add(inputs=[v2_16,v2_29], cost=295.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_32 = sub(inputs=[v2_3,v2_31(1)], cost=5.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_34 = sub(inputs=[v1_0,v2_33(1)], cost=1.000000, )\n",
-      "  int v2_36 = clamp(inputs=[v2_1,v2_35(0),v2_34], cost=7.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_37 = mul(inputs=[v2_36,v1_1], cost=8.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_39 = sub(inputs=[v1_1,v2_38(1)], cost=1.000000, )\n",
-      "  int v2_41 = clamp(inputs=[v2_32,v2_40(0),v2_39], cost=10.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_42 = add(inputs=[v2_37,v2_41], cost=19.000000, shape=[v1_0,v1_1], )\n",
-      "  float v2_43 = load(memory=[m0], indices=[v2_42], cost=147.000000, shape=[v1_0,v1_1], )\n",
-      "  float v2_44 = add(inputs=[v2_30,v2_43], cost=443.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_46 = add(inputs=[v2_3,v2_45(1)], cost=5.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_48 = sub(inputs=[v1_0,v2_47(1)], cost=1.000000, )\n",
-      "  int v2_50 = clamp(inputs=[v2_1,v2_49(0),v2_48], cost=7.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_51 = mul(inputs=[v2_50,v1_1], cost=8.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_53 = sub(inputs=[v1_1,v2_52(1)], cost=1.000000, )\n",
-      "  int v2_55 = clamp(inputs=[v2_46,v2_54(0),v2_53], cost=10.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_56 = add(inputs=[v2_51,v2_55], cost=19.000000, shape=[v1_0,v1_1], )\n",
-      "  float v2_57 = load(memory=[m0], indices=[v2_56], cost=147.000000, shape=[v1_0,v1_1], )\n",
-      "  float v2_58 = add(inputs=[v2_44,v2_57], cost=591.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_60 = sub(inputs=[v1_0,v2_59(1)], cost=1.000000, )\n",
-      "  int v2_62 = clamp(inputs=[v2_1,v2_61(0),v2_60], cost=7.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_63 = mul(inputs=[v2_62,v1_1], cost=8.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_65 = sub(inputs=[v1_1,v2_64(1)], cost=1.000000, )\n",
-      "  int v2_67 = clamp(inputs=[v2_3,v2_66(0),v2_65], cost=9.000000, shape=[v1_0,v1_1], )\n",
-      "  int v2_68 = add(inputs=[v2_63,v2_67], cost=18.000000, shape=[v1_0,v1_1], )\n",
-      "  float v2_69 = load(memory=[m0], indices=[v2_68], cost=146.000000, shape=[v1_0,v1_1], )\n",
-      "  float v2_71 = mul(inputs=[v2_69,v2_70(4.f)], cost=147.000000, shape=[v1_0,v1_1], )\n",
-      "  float v2_72 = sub(inputs=[v2_58,v2_71], cost=739.000000, shape=[v1_0,v1_1], )\n",
-      "  float v2_74 = load(memory=[m0], indices=[v2_0], cost=128.000000, )\n",
-      "  float v2_75 = mul(inputs=[v2_73(6.2831855f),v2_74], cost=129.000000, shape=[v1_0,v1_1], )\n",
-      "  float v2_76 = sin(inputs=[v2_75], cost=131.000000, shape=[v1_0,v1_1], )\n",
-      "  float v2_78 = mul(inputs=[v2_77(0.1f),v2_76], cost=132.000000, shape=[v1_0,v1_1], )\n",
-      "  float v2_79 = sub(inputs=[v2_72,v2_78], cost=872.000000, shape=[v1_0,v1_1], )\n",
-      "  float v2_81 = mul(inputs=[v2_80(0.2f),v2_79], cost=873.000000, shape=[v1_0,v1_1], )\n",
-      "  float v2_82 = load(memory=[m1], indices=[v2_0], cost=128.000000, )\n",
-      "  float v2_83 = add(inputs=[v2_82,v2_81], cost=1002.000000, shape=[v1_0,v1_1], )\n",
-      "  store(memory=[m3], inputs=[v2_83], indices=[v2_0], cost=1130.000000, shape=[v1_0,v1_1], )\n",
-      "  float v2_86 = mul(inputs=[v2_85(0.2f),v2_83], cost=1003.000000, shape=[v1_0,v1_1], )\n",
-      "  float v2_87 = load(memory=[m0], indices=[v2_0], cost=128.000000, )\n",
-      "  float v2_88 = add(inputs=[v2_87,v2_86], cost=1132.000000, shape=[v1_0,v1_1], )\n",
-      "  store(memory=[m2], inputs=[v2_88], indices=[v2_0], cost=1260.000000, shape=[v1_0,v1_1], )\n",
+      "  int v2_0 = block_id(cost=0.000000, shape=[v1_0,v1_1], )\n",
+      "  int v2_3 = block_thread_id(data=[1], cost=0.000000, shape=[v1_0,v1_1], )\n",
+      "  int v2_4 = block_thread_id(data=[0], cost=0.000000, shape=[v1_0,v1_1], )\n",
+      "  int v2_5 = add(inputs=[v1_1,v2_2(16)], cost=1.000000, )\n",
+      "  int v2_7 = sub(inputs=[v2_5,v2_6(1)], cost=2.000000, )\n",
+      "  int blocks_shape_1 = div(inputs=[v2_7,v2_2(16)], cost=4.000000, )\n",
+      "  int v2_8 = div(inputs=[v2_0,blocks_shape_1], cost=6.000000, shape=[v1_0,v1_1], )\n",
+      "  int v2_9 = mul(inputs=[v2_8,blocks_shape_1], cost=11.000000, shape=[v1_0,v1_1], )\n",
+      "  int v2_10 = sub(inputs=[v2_0,v2_9], cost=12.000000, shape=[v1_0,v1_1], )\n",
+      "  int v2_11 = mul(inputs=[v2_8,v2_1(16)], cost=7.000000, shape=[v1_0,v1_1], )\n",
+      "  int index_0 = add(inputs=[v2_11,v2_3], cost=8.000000, shape=[v1_0,v1_1], )\n",
+      "  int v2_12 = mul(inputs=[v2_10,v2_2(16)], cost=13.000000, shape=[v1_0,v1_1], )\n",
+      "  int index_1 = add(inputs=[v2_12,v2_4], cost=14.000000, shape=[v1_0,v1_1], )\n",
+      "  bool v2_13 = lt(inputs=[index_0,v1_0], cost=9.000000, shape=[v1_0,v1_1], )\n",
+      "  bool v2_14 = lt(inputs=[index_1,v1_1], cost=15.000000, shape=[v1_0,v1_1], )\n",
+      "  bool is_inside_dispatch = and(inputs=[v2_13,v2_14], cost=25.000000, shape=[v1_0,v1_1], )\n",
+      "  if(inputs=[is_inside_dispatch], cost=125.000000, shape=[v1_0,v1_1], )\n",
+      "  {\n",
+      "    int v3_0 = mul(inputs=[index_0,v1_1], cost=9.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_1 = add(inputs=[v3_0,index_1], cost=24.000000, shape=[v1_0,v1_1], )\n",
+      "    float v_2 = load(memory=[v], indices=[v3_1], cost=152.000000, )\n",
+      "    int v3_2 = mul(inputs=[index_0,v1_1], cost=9.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_3 = add(inputs=[v3_2,index_1], cost=24.000000, shape=[v1_0,v1_1], )\n",
+      "    float u_2 = load(memory=[u], indices=[v3_3], cost=152.000000, )\n",
+      "    int v3_5 = sub(inputs=[index_0,v3_4(1)], cost=9.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_7 = sub(inputs=[v1_0,v3_6(1)], cost=1.000000, )\n",
+      "    int v3_9 = clamp(inputs=[v3_5,v3_8(0),v3_7], cost=14.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_10 = mul(inputs=[v3_9,v1_1], cost=15.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_12 = sub(inputs=[v1_1,v3_11(1)], cost=1.000000, )\n",
+      "    int v3_14 = clamp(inputs=[index_1,v3_13(0),v3_12], cost=19.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_15 = add(inputs=[v3_10,v3_14], cost=35.000000, shape=[v1_0,v1_1], )\n",
+      "    float u_3 = load(memory=[u], indices=[v3_15], cost=163.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_17 = add(inputs=[index_0,v3_16(1)], cost=9.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_19 = sub(inputs=[v1_0,v3_18(1)], cost=1.000000, )\n",
+      "    int v3_21 = clamp(inputs=[v3_17,v3_20(0),v3_19], cost=14.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_22 = mul(inputs=[v3_21,v1_1], cost=15.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_24 = sub(inputs=[v1_1,v3_23(1)], cost=1.000000, )\n",
+      "    int v3_26 = clamp(inputs=[index_1,v3_25(0),v3_24], cost=19.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_27 = add(inputs=[v3_22,v3_26], cost=35.000000, shape=[v1_0,v1_1], )\n",
+      "    float u_4 = load(memory=[u], indices=[v3_27], cost=163.000000, shape=[v1_0,v1_1], )\n",
+      "    float v3_28 = add(inputs=[u_3,u_4], cost=327.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_30 = sub(inputs=[index_1,v3_29(1)], cost=15.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_32 = sub(inputs=[v1_0,v3_31(1)], cost=1.000000, )\n",
+      "    int v3_34 = clamp(inputs=[index_0,v3_33(0),v3_32], cost=13.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_35 = mul(inputs=[v3_34,v1_1], cost=14.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_37 = sub(inputs=[v1_1,v3_36(1)], cost=1.000000, )\n",
+      "    int v3_39 = clamp(inputs=[v3_30,v3_38(0),v3_37], cost=20.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_40 = add(inputs=[v3_35,v3_39], cost=35.000000, shape=[v1_0,v1_1], )\n",
+      "    float u_5 = load(memory=[u], indices=[v3_40], cost=163.000000, shape=[v1_0,v1_1], )\n",
+      "    float v3_41 = add(inputs=[v3_28,u_5], cost=491.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_43 = add(inputs=[index_1,v3_42(1)], cost=15.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_45 = sub(inputs=[v1_0,v3_44(1)], cost=1.000000, )\n",
+      "    int v3_47 = clamp(inputs=[index_0,v3_46(0),v3_45], cost=13.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_48 = mul(inputs=[v3_47,v1_1], cost=14.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_50 = sub(inputs=[v1_1,v3_49(1)], cost=1.000000, )\n",
+      "    int v3_52 = clamp(inputs=[v3_43,v3_51(0),v3_50], cost=20.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_53 = add(inputs=[v3_48,v3_52], cost=35.000000, shape=[v1_0,v1_1], )\n",
+      "    float u_6 = load(memory=[u], indices=[v3_53], cost=163.000000, shape=[v1_0,v1_1], )\n",
+      "    float v3_54 = add(inputs=[v3_41,u_6], cost=655.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_56 = sub(inputs=[v1_0,v3_55(1)], cost=1.000000, )\n",
+      "    int v3_58 = clamp(inputs=[index_0,v3_57(0),v3_56], cost=13.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_59 = mul(inputs=[v3_58,v1_1], cost=14.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_61 = sub(inputs=[v1_1,v3_60(1)], cost=1.000000, )\n",
+      "    int v3_63 = clamp(inputs=[index_1,v3_62(0),v3_61], cost=19.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_64 = add(inputs=[v3_59,v3_63], cost=34.000000, shape=[v1_0,v1_1], )\n",
+      "    float u_7 = load(memory=[u], indices=[v3_64], cost=162.000000, shape=[v1_0,v1_1], )\n",
+      "    float v3_66 = mul(inputs=[u_7,v3_65(4.0f)], cost=163.000000, shape=[v1_0,v1_1], )\n",
+      "    float laplacian = sub(inputs=[v3_54,v3_66], cost=819.000000, shape=[v1_0,v1_1], )\n",
+      "    float v3_68 = mul(inputs=[v3_67(6.2831855f),u_2], cost=153.000000, shape=[v1_0,v1_1], )\n",
+      "    float v3_69 = sin(inputs=[v3_68], cost=155.000000, shape=[v1_0,v1_1], )\n",
+      "    float v3_71 = mul(inputs=[v3_70(0.1f),v3_69], cost=156.000000, shape=[v1_0,v1_1], )\n",
+      "    float force = sub(inputs=[laplacian,v3_71], cost=976.000000, shape=[v1_0,v1_1], )\n",
+      "    float v3_73 = mul(inputs=[v3_72(0.2f),force], cost=977.000000, shape=[v1_0,v1_1], )\n",
+      "    float v_new_2 = add(inputs=[v_2,v3_73], cost=1130.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_74 = mul(inputs=[index_0,v1_1], cost=9.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_75 = add(inputs=[v3_74,index_1], cost=24.000000, shape=[v1_0,v1_1], )\n",
+      "    store(memory=[v_new], inputs=[v_new_2], indices=[v3_75], cost=1282.000000, shape=[v1_0,v1_1], )\n",
+      "    float v3_78 = mul(inputs=[v3_77(0.2f),v_new_2], cost=1131.000000, shape=[v1_0,v1_1], )\n",
+      "    float v3_79 = add(inputs=[u_2,v3_78], cost=1284.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_80 = mul(inputs=[index_0,v1_1], cost=9.000000, shape=[v1_0,v1_1], )\n",
+      "    int v3_81 = add(inputs=[v3_80,index_1], cost=24.000000, shape=[v1_0,v1_1], )\n",
+      "    store(memory=[m0], inputs=[v3_79], indices=[v3_81], cost=1436.000000, shape=[v1_0,v1_1], )\n",
+      "  }\n",
       "}\n",
       "\n"
      ]
@@ -151,23 +171,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Used memory: 67108864\n",
-      "Iterations per second: 1771.445223906442\n",
-      "Iterations per second: 31758.18883925191\n",
-      "Iterations per second: 49855.033876144065\n",
-      "Iterations per second: 29957.174487536606\n",
-      "Iterations per second: 37960.93764141551\n",
-      "Iterations per second: 38325.14619883041\n",
-      "Iterations per second: 27207.47275557862\n",
-      "Iterations per second: 38154.31638315292\n",
-      "Iterations per second: 27319.116784993163\n",
-      "Iterations per second: 37783.11863796054\n",
-      "Iterations per second: 37735.52856500225\n",
-      "Iterations per second: 31743.767501702867\n",
-      "Iterations per second: 38398.828160761695\n",
-      "Iterations per second: 27326.236236888395\n",
-      "Iterations per second: 38286.66362391602\n",
-      "Used memory: 67108864\n"
+      "Used memory: 262144\n",
+      "Iterations per second: 1923.0752301654256\n",
+      "Iterations per second: 24998.83180355227\n",
+      "Iterations per second: 33335.749483388965\n",
+      "Iterations per second: 49973.83533897295\n",
+      "Iterations per second: 33335.749483388965\n",
+      "Iterations per second: 33335.749483388965\n",
+      "Iterations per second: 33341.049284578694\n",
+      "Iterations per second: 33325.15493405371\n",
+      "Iterations per second: 33341.049284578694\n",
+      "Iterations per second: 33333.10021457522\n",
+      "Iterations per second: 33327.80294000795\n",
+      "Iterations per second: 33330.451366815\n",
+      "Iterations per second: 33343.699817155575\n",
+      "Iterations per second: 33298.69799936488\n",
+      "Iterations per second: 25016.724323034712\n",
+      "Used memory: 524288\n"
      ]
     }
    ],
