Implement 2D fft filter example

--- a/examples/Algorithms/fft.ipynb
+++ b/examples/Algorithms/fft.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -10,13 +10,13 @@
      "output_type": "stream",
      "text": [
       "FFT:\n",
-      "  Kernel count: 2\n",
+      "  Kernel count: 1\n",
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 507\n",
-      "  IR Compile time: 3.446500 ms\n",
-      "  Compiler time: 1379.151123 ms\n",
+      "  Lines of generated code: 494\n",
+      "  IR Compile time: 3.234900 ms\n",
+      "  Compiler time: 1394.636841 ms\n",
       "\n"
      ]
     }
@@ -28,43 +28,37 @@
     "\n",
     "tf.initialize(tf.cpu)\n",
     "\n",
-    "def reverseBits(num, bits):\n",
-    "    reverse_num = tf.int(tf.reversebits(tf.uint(num))) >> (32 - bits)\n",
-    "    return reverse_num + ((num >> bits) << bits)\n",
-    "\n",
-    "def getIndexPair(i, it):\n",
-    "    k1 = reverseBits(2*i, it+1)\n",
-    "    k2 = k1 + (1 << it)\n",
-    "    return [k1, k2]\n",
-    "\n",
     "#in-place FFT implementation\n",
     "def FFT():\n",
-    "    Signal = tf.input([-1], tf.float32)\n",
-    "    N = Signal.shape[0]\n",
+    "    SignalRe = tf.input([-1], tf.float32)\n",
+    "    SignalIm = tf.input([-1], tf.float32)\n",
+    "    N = SignalRe.shape[0]\n",
     "    \n",
     "    it_num = tf.int(tf.floor(tf.log2(tf.float(N))))-1\n",
+    "\n",
+    "    def reverseBits(num, bits):\n",
+    "        reverse_num = tf.reversebits(tf.uint(num)) >> (32 - bits)\n",
+    "        return tf.int(reverse_num) + ((num >> bits) << bits)\n",
+    "\n",
+    "    def getIndexPair(i, it):\n",
+    "        k1 = reverseBits(2*i, it+1)\n",
+    "        k2 = k1 + (1 << it)\n",
+    "        return [k1, k2]\n",
+    "\n",
     "    Output = tf.buffer([N, 2], tf.float32)\n",
     "\n",
     "    i, = tf.indices([N/2])\n",
+    "    with tf.loop(0, it_num+1) as it:\n",
+    "        k1, k2 = getIndexPair(i, tf.select(it == 0, it_num, it))\n",
+    "        Re1 = tf.select(it == 0, SignalRe[k2], Output[k2, 0])\n",
+    "        Im1 = tf.select(it == 0, SignalIm[k2], Output[k2, 1])\n",
+    "        Re2 = tf.select(it == 0, SignalRe[k1], Output[k1, 0])\n",
+    "        Im2 = tf.select(it == 0, SignalIm[k1], Output[k1, 1])\n",
     "\n",
-    "    k1, k2 = getIndexPair(i, it_num)\n",
-    "    S1 = Signal[k1]\n",
-    "    S2 = Signal[k2]\n",
-    "    Output[2*i, 0] = S1 + S2\n",
-    "    Output[2*i, 1] = 0.0\n",
-    "    Output[2*i+1, 0] = S1 - S2\n",
-    "    Output[2*i+1, 1] = 0.0\n",
-    "\n",
-    "    with tf.loop(1, it_num+1) as it:\n",
     "        k1, k2 = getIndexPair(i, it)\n",
     "        k3 = (k1 & ((1 << it) - 1)) * (1 << (it_num - it))\n",
     "        alpha = - 2 * np.pi * tf.float(k3) / tf.float(N)\n",
-    "        Re1 = Output[k2, 0]\n",
-    "        Im1 = Output[k2, 1]\n",
-    "        Re2 = Output[k1, 0]\n",
-    "        Im2 = Output[k1, 1]\n",
-    "        C = tf.cos(alpha)\n",
-    "        S = tf.sin(alpha)\n",
+    "        C, S = tf.cos(alpha), tf.sin(alpha)\n",
     "        m = C * Re1 - S * Im1\n",
     "        n = S * Re1 + C * Im1\n",
     "        Output[k1, 0] = Re2 + m\n",
@@ -79,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -111,13 +105,17 @@
     "signal += np.cos(20 * 2 * np.pi * t / N)\n",
     "signal += np.sin(50 * 2 * np.pi * t * t / (N * N) + np.pi/4)\n",
     "\n",
+    "signalim = 0.0*np.cos(10 * 2 * np.pi * t / N).astype(np.float32)\n",
+    "\n",
+    "\n",
     "#run the FFT\n",
-    "signal_tf = tf.tensor(signal)\n",
-    "Output_tf, = fft(signal_tf)\n",
+    "signalre_tf = tf.tensor(signal)\n",
+    "signalim_tf = tf.tensor(signalim)\n",
+    "Output_tf, = fft(signalre_tf, signalim_tf)\n",
     "output = Output_tf.numpy\n",
     "\n",
     "#compare with numpy\n",
-    "np_fft = np.fft.fft(signal)\n",
+    "np_fft = np.fft.fft(signal + 1j * signalim)\n",
     "\n",
     "#plot the results side by side\n",
     "plt.figure(figsize=(13, 3))\n",
