--- a/examples/ML/MNIST.ipynb
+++ b/examples/ML/MNIST.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -185,8 +185,8 @@
       "  Host readbacks: 1\n",
       "  Host writes: 0\n",
       "  Lines of generated code: 517\n",
-      "  IR Compile time: 32.020599 ms\n",
-      "  Compiler time: 1761.896729 ms\n",
+      "  IR Compile time: 31.956301 ms\n",
+      "  Compiler time: 1643.772705 ms\n",
       "\n"
      ]
     }
@@ -199,13 +199,8 @@
     "    return exp / tf.unsqueeze(tf.sum(exp))\n",
     "\n",
     "def mul_bias(X, W):\n",
-    "    Xshape = list(X.shape)\n",
-    "    Wshape = list(W.shape)\n",
-    "    Newshape = Xshape[:-1]\n",
-    "    Newshape.append(Wshape[-2])\n",
-    "    ids = list(tf.indices(Newshape))\n",
-    "    Xbias = tf.select(ids[-1] == Xshape[-1], 1.0, X[tuple(ids)])\n",
-    "    return tf.matmul(Xbias, W)\n",
+    "    ids = tf.indices(list(X.shape[:-1]) + [W.shape[-2]])\n",
+    "    return tf.select(ids[-1] == X.shape[-1], 1.0, X[ids]) @ W\n",
     "\n",
     "def forward(W1, W2, W3, X):\n",
     "    L1 = tf.tanh(mul_bias(X, W1))\n",
