Improve manual kernel syntax and generation

--- a/examples/Algorithms/fft.ipynb
+++ b/examples/Algorithms/fft.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -14,9 +14,9 @@
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 494\n",
-      "  IR Compile time: 3.234900 ms\n",
-      "  Compiler time: 1394.636841 ms\n",
+      "  Lines of generated code: 495\n",
+      "  IR Compile time: 3.225700 ms\n",
+      "  Compiler time: 1451.854614 ms\n",
       "\n"
      ]
     }
@@ -33,7 +33,7 @@
     "    SignalRe = tf.input([-1], tf.float32)\n",
     "    SignalIm = tf.input([-1], tf.float32)\n",
     "    N = SignalRe.shape[0]\n",
-    "    \n",
+    "\n",
     "    it_num = tf.int(tf.floor(tf.log2(tf.float(N))))-1\n",
     "\n",
     "    def reverseBits(num, bits):\n",
@@ -47,24 +47,25 @@
     "\n",
     "    Output = tf.buffer([N, 2], tf.float32)\n",
     "\n",
-    "    i, = tf.indices([N/2])\n",
+    "    #i, = tf.indices([N/2])\n",
     "    with tf.loop(0, it_num+1) as it:\n",
-    "        k1, k2 = getIndexPair(i, tf.select(it == 0, it_num, it))\n",
-    "        Re1 = tf.select(it == 0, SignalRe[k2], Output[k2, 0])\n",
-    "        Im1 = tf.select(it == 0, SignalIm[k2], Output[k2, 1])\n",
-    "        Re2 = tf.select(it == 0, SignalRe[k1], Output[k1, 0])\n",
-    "        Im2 = tf.select(it == 0, SignalIm[k1], Output[k1, 1])\n",
+    "        with tf.kernel([N/2]) as i:\n",
+    "            k1, k2 = getIndexPair(i, tf.select(it == 0, it_num, it))\n",
+    "            Re1 = tf.select(it == 0, SignalRe[k2], Output[k2, 0])\n",
+    "            Im1 = tf.select(it == 0, SignalIm[k2], Output[k2, 1])\n",
+    "            Re2 = tf.select(it == 0, SignalRe[k1], Output[k1, 0])\n",
+    "            Im2 = tf.select(it == 0, SignalIm[k1], Output[k1, 1])\n",
     "\n",
-    "        k1, k2 = getIndexPair(i, it)\n",
-    "        k3 = (k1 & ((1 << it) - 1)) * (1 << (it_num - it))\n",
-    "        alpha = - 2 * np.pi * tf.float(k3) / tf.float(N)\n",
-    "        C, S = tf.cos(alpha), tf.sin(alpha)\n",
-    "        m = C * Re1 - S * Im1\n",
-    "        n = S * Re1 + C * Im1\n",
-    "        Output[k1, 0] = Re2 + m\n",
-    "        Output[k1, 1] = Im2 + n\n",
-    "        Output[k2, 0] = Re2 - m\n",
-    "        Output[k2, 1] = Im2 - n\n",
+    "            k1, k2 = getIndexPair(i, it)\n",
+    "            k3 = (k1 & ((1 << it) - 1)) * (1 << (it_num - it))\n",
+    "            alpha = - 2 * np.pi * tf.float(k3) / tf.float(N)\n",
+    "            C, S = tf.cos(alpha), tf.sin(alpha)\n",
+    "            m = C * Re1 - S * Im1\n",
+    "            n = S * Re1 + C * Im1\n",
+    "            Output[k1, 0] = Re2 + m\n",
+    "            Output[k1, 1] = Im2 + n\n",
+    "            Output[k2, 0] = Re2 - m\n",
+    "            Output[k2, 1] = Im2 - n\n",
     "\n",
     "    return [Output]\n",
     "\n",
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
