Properly output single result
+fix all examples

--- a/examples/Algorithms/bitonic.ipynb
+++ b/examples/Algorithms/bitonic.ipynb
@@ -15,9 +15,9 @@
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 420\n",
-      "  IR Compile time: 1.156200 ms\n",
-      "  Compiler time: 1350.833374 ms\n",
+      "  Lines of generated code: 444\n",
+      "  IR Compile time: 3.093400 ms\n",
+      "  Compiler time: 1558.163818 ms\n",
       "\n"
      ]
     }
@@ -71,7 +71,7 @@
     "\n",
     "    tf.loop(sortingIteration, 0, steps, 1)\n",
     "\n",
-    "    return [output]\n",
+    "    return output\n",
     "\n",
     "sort_program = tf.compile(BitonicSort)"
    ]
@@ -109,7 +109,7 @@
     "# Sort the keys\n",
     "data = np.column_stack((keys, values))\n",
     "data_tf = tf.tensor(data)\n",
-    "sorted_data, = sort_program(data_tf)\n",
+    "sorted_data = sort_program(data_tf)\n",
     "sorted_data = sorted_data.numpy\n",
     "\n",
     "# Sort the keys using numpy\n",
