--- a/examples/Algorithms/fft.ipynb
+++ b/examples/Algorithms/fft.ipynb
@@ -2,21 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "FFT:\n",
       "  Kernel count: 1\n",
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
       "  Lines of generated code: 495\n",
-      "  IR Compile time: 3.225700 ms\n",
-      "  Compiler time: 1451.854614 ms\n",
+      "  IR Compile time: 3.077600 ms\n",
+      "  Compiler time: 1470.823730 ms\n",
       "\n"
      ]
     }
@@ -67,7 +68,7 @@
     "            Output[k2, 0] = Re2 - m\n",
     "            Output[k2, 1] = Im2 - n\n",
     "\n",
-    "    return [Output]\n",
+    "    return Output\n",
     "\n",
     "fft = tf.compile(FFT)"
    ]
@@ -112,7 +113,7 @@
     "#run the FFT\n",
     "signalre_tf = tf.tensor(signal)\n",
     "signalim_tf = tf.tensor(signalim)\n",
-    "Output_tf, = fft(signalre_tf, signalim_tf)\n",
+    "Output_tf = fft(signalre_tf, signalim_tf)\n",
     "output = Output_tf.numpy\n",
     "\n",
     "#compare with numpy\n",
