--- a/examples/Algorithms/kernels.ipynb
+++ b/examples/Algorithms/kernels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -15,8 +15,8 @@
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
       "  Lines of generated code: 437\n",
-      "  IR Compile time: 0.822500 ms\n",
-      "  Compiler time: 1475.694824 ms\n",
+      "  IR Compile time: 0.726800 ms\n",
+      "  Compiler time: 1518.947998 ms\n",
       "\n"
      ]
     },
@@ -47,14 +47,14 @@
     "    with tf.kernel(A.shape) as (i, j):\n",
     "        C[i, j] = A[i, j] + B[i, j]\n",
     "\n",
-    "    return [C]\n",
+    "    return C\n",
     "\n",
     "kern = tf.compile(Kernels)\n",
     "\n",
     "A = tf.tensor(np.random.rand(100, 100).astype(np.float32))\n",
     "B = tf.tensor(np.random.rand(100, 100).astype(np.float32))\n",
     "\n",
-    "C, = kern(A, B)\n",
+    "C = kern(A, B)\n",
     "\n",
     "plt.imshow(C.numpy - (A.numpy + B.numpy))\n",
     "plt.show()\n"
