--- a/examples/Rendering/blur.ipynb
+++ b/examples/Rendering/blur.ipynb
@@ -50,7 +50,7 @@
     "    for k in range(-blur_d, blur_d+1):\n",
     "        blur_v += blur_h[i, j+k, ch] * kernel(k)\n",
     "\n",
-    "    return [blur_v]\n",
+    "    return blur_v\n",
     "\n",
     "tf_blur = tf.compile(blur)"
    ]
