--- a/examples/Algorithms/reshape_reduction.ipynb
+++ b/examples/Algorithms/reshape_reduction.ipynb
@@ -2,30 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "MaxBlock:\n",
       "  Kernel count: 4\n",
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 563\n",
-      "  IR Compile time: 2.613100 ms\n",
-      "  Compiler time: 1413.990601 ms\n",
-      "\n",
-      "Transpose:\n",
-      "  Kernel count: 1\n",
-      "  Intermediate buffers: 0\n",
-      "  Host readbacks: 0\n",
-      "  Host writes: 0\n",
-      "  Lines of generated code: 430\n",
-      "  IR Compile time: 0.445400 ms\n",
-      "  Compiler time: 1349.074463 ms\n",
+      "  Lines of generated code: 601\n",
+      "  IR Compile time: 3.739400 ms\n",
+      "  Compiler time: 1498.895630 ms\n",
       "\n"
      ]
     }
@@ -50,7 +42,7 @@
     "\ttotal_min = tf.min(min_val)\n",
     "\t#get mean block\n",
     "\tmean_block = tf.mean(A, axis=0)\n",
-    "\treturn [max_val, min_val, sum, mean, norm, total_max, total_min, mean_block]\n",
+    "\treturn max_val, min_val, sum, mean, norm, total_max, total_min, mean_block\n",
     "\n",
     "max_block = tf.compile(MaxBlock)"
    ]
