--- a/examples/Algorithms/stress_test.ipynb
+++ b/examples/Algorithms/stress_test.ipynb
@@ -10,11 +10,14 @@
      "output_type": "stream",
      "text": [
       "TensorFrost module loaded!\n",
-      "TensorProgram:\n",
+      "test:\n",
       "  Kernel count: 2\n",
-      "  Intermediate buffers: 1\n",
-      "  Lines of generated code: 140\n",
-      "  IR size: 209\n",
+      "  Intermediate buffers: 0\n",
+      "  Host readbacks: 0\n",
+      "  Host writes: 0\n",
+      "  Lines of generated code: 492\n",
+      "  IR Compile time: 3.605000 ms\n",
+      "  Compiler time: 1444.354736 ms\n",
       "\n",
       "(32, 32, 3)\n"
      ]
@@ -64,12 +67,12 @@
     "    canvas[8, a+8, 0] = 1.0\n",
     "    canvas[a+8, 24, 0] = 1.0\n",
     "    canvas[24, a+8, 0] = 1.0\n",
-    "    return [canvas]\n",
+    "    return canvas\n",
     "\n",
     "\n",
     "t1 = tf.compile(test)\n",
     "\n",
-    "res, = t1()\n",
+    "res = t1()\n",
     "resnp = res.numpy\n",
     "print(resnp.shape)\n",
     "#plot the result\n",
@@ -90,7 +93,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m     canvas[N\u001b[39m/\u001b[39m\u001b[39m3\u001b[39m:N\u001b[39m/\u001b[39m\u001b[39m2\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m1.0\u001b[39m\n\u001b[0;32m      5\u001b[0m     \u001b[39mreturn\u001b[39;00m [canvas]\n\u001b[1;32m----> 7\u001b[0m t1 \u001b[39m=\u001b[39m tf\u001b[39m.\u001b[39;49mprogram(test)\n\u001b[0;32m      9\u001b[0m res, \u001b[39m=\u001b[39m t1()\n\u001b[0;32m     10\u001b[0m resnp \u001b[39m=\u001b[39m res\u001b[39m.\u001b[39mnumpy\n",
+      "Cell \u001b[1;32mIn[2], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m     canvas[N\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m3\u001b[39m:N\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1.0\u001b[39m\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m [canvas]\n\u001b[1;32m----> 7\u001b[0m t1 \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprogram\u001b[49m(test)\n\u001b[0;32m      9\u001b[0m res, \u001b[38;5;241m=\u001b[39m t1()\n\u001b[0;32m     10\u001b[0m resnp \u001b[38;5;241m=\u001b[39m res\u001b[38;5;241m.\u001b[39mnumpy\n",
       "\u001b[1;31mAttributeError\u001b[0m: module 'TensorFrost' has no attribute 'program'"
      ]
     }
