Update rest of the examples

--- a/examples/Rendering/ray_marcher.ipynb
+++ b/examples/Rendering/ray_marcher.ipynb
@@ -15,9 +15,9 @@
       "  Intermediate buffers: 2\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 452\n",
-      "  IR Compile time: 23.091000 ms\n",
-      "  Compiler time: 1957.063599 ms\n",
+      "  Lines of generated code: 453\n",
+      "  IR Compile time: 40.405102 ms\n",
+      "  Compiler time: 3939.435791 ms\n",
       "\n"
      ]
     }
@@ -192,7 +192,7 @@
     "    canvas[i, j, 1] = cy\n",
     "    canvas[i, j, 2] = cz\n",
     "    \n",
-    "    return [canvas]\n",
+    "    return canvas\n",
     "\n",
     "raymarch = tf.compile(volume_ray_marcher)\n"
    ]
@@ -211,9 +211,9 @@
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 432\n",
-      "  IR Compile time: 3.336500 ms\n",
-      "  Compiler time: 1360.990845 ms\n",
+      "  Lines of generated code: 433\n",
+      "  IR Compile time: 4.538500 ms\n",
+      "  Compiler time: 4058.934814 ms\n",
       "\n"
      ]
     },
@@ -272,12 +272,12 @@
     "    x, y, z = FromVolumeSpace(tf.float(i), tf.float(j), tf.float(k))\n",
     "    sdf, cx, cy, cz = mandelbulb(x, y, z)\n",
     "    density = smoothstep(sdf, 0.01, -0.01)\n",
-    "    return [density]\n",
+    "    return density\n",
     "\n",
     "mandelbulb_volume = tf.compile(mandelbulb_volume)\n",
     "\n",
     "# Create volume\n",
-    "volume, = mandelbulb_volume()\n",
+    "volume = mandelbulb_volume()\n",
     "volume_np = volume.numpy\n",
     "\n",
     "# Plot slice\n",
@@ -303,7 +303,7 @@
     }
    ],
    "source": [
-    "img, = raymarch(volume)\n",
+    "img = raymarch(volume)\n",
     "imgnp = img.numpy\n",
     "\n",
     "#plot result\n",
