--- a/examples/Rendering/sphere_tracer.ipynb
+++ b/examples/Rendering/sphere_tracer.ipynb
@@ -15,9 +15,9 @@
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 2\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 437\n",
-      "  IR Compile time: 18.278400 ms\n",
-      "  Compiler time: 1428.514038 ms\n",
+      "  Lines of generated code: 438\n",
+      "  IR Compile time: 29.583200 ms\n",
+      "  Compiler time: 4031.055908 ms\n",
       "\n"
      ]
     }
@@ -174,7 +174,7 @@
     "\n",
     "    tf.if_cond(td < max_depth, if_body)\n",
     "    \n",
-    "    return [canvas]\n",
+    "    return canvas\n",
     "\n",
     "raymarch = tf.compile(ray_marcher)"
    ]
@@ -200,7 +200,7 @@
     "    cam_params = tf.tensor( np.array([3.0, phi, theta], dtype=np.float32) )\n",
     "    res = tf.tensor( np.array([resolution, resolution], dtype=np.int32) )\n",
     "\n",
-    "    img, = raymarch(cam_params, res)\n",
+    "    img = raymarch(cam_params, res)\n",
     "    imgnp = img.numpy\n",
     "\n",
     "    return imgnp\n",
@@ -283,19 +283,14 @@
       "Frame 56 rendered\n",
       "Frame 57 rendered\n",
       "Frame 58 rendered\n",
-      "Frame 59 rendered\n",
-      "Frame 60 rendered\n",
-      "Frame 61 rendered\n",
-      "Frame 62 rendered\n",
-      "Frame 63 rendered\n",
-      "Frame 64 rendered\n"
+      "Frame 59 rendered\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_36328\\2559193286.py:46: RuntimeWarning: invalid value encountered in cast\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_3384\\2559193286.py:46: RuntimeWarning: invalid value encountered in cast\n",
       "  video.write((np.clip(render,0.0,1.0) * 255).astype(np.uint8))\n"
      ]
     },
@@ -303,6 +298,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Frame 60 rendered\n",
+      "Frame 61 rendered\n",
+      "Frame 62 rendered\n",
+      "Frame 63 rendered\n",
+      "Frame 64 rendered\n",
       "Frame 65 rendered\n",
       "Frame 66 rendered\n",
       "Frame 67 rendered\n",
@@ -538,7 +538,7 @@
       "Frame 297 rendered\n",
       "Frame 298 rendered\n",
       "Frame 299 rendered\n",
-      "FPS: 57.85260461990049\n"
+      "FPS: 40.53909153332108\n"
      ]
     }
    ],
