--- a/examples/Simulation/wave_simulation.ipynb
+++ b/examples/Simulation/wave_simulation.ipynb
@@ -15,9 +15,9 @@
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 425\n",
-      "  IR Compile time: 1.450500 ms\n",
-      "  Compiler time: 1460.647949 ms\n",
+      "  Lines of generated code: 439\n",
+      "  IR Compile time: 2.302300 ms\n",
+      "  Compiler time: 4076.615234 ms\n",
       "\n"
      ]
     }
@@ -45,9 +45,7 @@
     "    u = tf.input([-1, -1], tf.float32)\n",
     "    v = tf.input(u.shape, tf.float32)\n",
     "\n",
-    "    u,v = WaveIteration(u, v, 0.2)\n",
-    "\n",
-    "    return [u, v]\n",
+    "    return WaveIteration(u, v, 0.2)\n",
     "\n",
     "test = tf.compile(WaveEq)\n"
    ]
@@ -171,23 +169,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Used memory: 262144\n",
-      "Iterations per second: 1923.0752301654256\n",
+      "Iterations per second: 1162.7847146754198\n",
+      "Iterations per second: 12499.788407092832\n",
+      "Iterations per second: 14286.749778595273\n",
+      "Iterations per second: 12500.160934612863\n",
+      "Iterations per second: 11110.739072847682\n",
+      "Iterations per second: 14286.263156102046\n",
+      "Iterations per second: 11111.033404858406\n",
+      "Iterations per second: 7692.441999082989\n",
+      "Iterations per second: 19995.728451563693\n",
+      "Iterations per second: 7987.324801950031\n",
+      "Iterations per second: 7693.711937779734\n",
       "Iterations per second: 24998.83180355227\n",
-      "Iterations per second: 33335.749483388965\n",
-      "Iterations per second: 49973.83533897295\n",
-      "Iterations per second: 33335.749483388965\n",
-      "Iterations per second: 33335.749483388965\n",
-      "Iterations per second: 33341.049284578694\n",
-      "Iterations per second: 33325.15493405371\n",
-      "Iterations per second: 33341.049284578694\n",
-      "Iterations per second: 33333.10021457522\n",
-      "Iterations per second: 33327.80294000795\n",
-      "Iterations per second: 33330.451366815\n",
-      "Iterations per second: 33343.699817155575\n",
-      "Iterations per second: 33298.69799936488\n",
-      "Iterations per second: 25016.724323034712\n",
-      "Used memory: 524288\n"
+      "Iterations per second: 14285.290010558223\n",
+      "Iterations per second: 16666.55010728761\n",
+      "Iterations per second: 33341.049284578694\n"
      ]
     }
    ],
@@ -219,8 +215,6 @@
     "A = tf.tensor(Anp)\n",
     "B = tf.tensor(Bnp)\n",
     "\n",
-    "print(\"Used memory: \" + str(tf.used_memory()))\n",
-    "\n",
     "iters = 1500\n",
     "\n",
     "for i in range(iters):\n",
@@ -234,9 +228,7 @@
     "        start = time.time()\n",
     "\n",
     "\n",
-    "writer.close()\n",
-    "\n",
-    "print(\"Used memory: \" + str(tf.used_memory()))"
+    "writer.close()"
    ]
   },
   {
